2012-05-09  Pedro Alves  <palves@redhat.com>

	* target.c (set_maintenance_target_async_permitted): Rename to ...
	(set_target_async_command): ... this.
	(show_maintenance_target_async_permitted): Rename to ...
	(show_target_async_command): ... this.
	(initialize_targets): Adjust.

2012-05-08  Doug Evans  <dje@google.com>

	* go-exp.y (classify_name): Add missing assignment of fields of
	yylval.ssym.

2012-05-08  Eli Zaretskii  <eliz@gnu.org>

	Display the ">" prompt in interactive mode while reading canned
	commands, even when the current interpreter is MI.

	* interps.c (interp_set_temp): New function.

	* interps.h (interp_set_temp): Add prototype.

	* cli/cli-script.c (restore_interp): New cleanup function.
	(read_command_lines): Temporarily override the current interpreter
	with CLI and arrange for restoring the original one.

2012-05-12  Joel Sherrill <joel.sherrill@oarcorp.com>

	* microblaze-rom.c (_initialize_picobug_rom): Add prototype.

2012-05-07  Sergio Durigan Junior  <sergiodj@redhat.com>

	* probe.c (parse_probes): Move conditional to check for
	debuginfo files from here...
	* stap-probe.c (stap_get_probes): ... to here.

2012-05-07  Mark Kettenis  <kettenis@gnu.org>
	    H.J. Lu  <hongjiu.lu@intel.com>

	* amd64-tdep.c (amd64_analyze_prologue): Additionally check for
	`movl %esp, %ebp' for the X32 ABI.

2012-05-07  Tom Tromey  <tromey@redhat.com>

	* dwarf2read.c (dwarf_tag_name): Return const char *.  Use
	get_DW_TAG_name.
	(dwarf_attr_name): Return const char *.  Use get_DW_AT_name.
	(dwarf_form_name): Return const char *.  Use get_DW_FORM_name.
	(dwarf_stack_op_name): Remove.
	(dwarf_cfi_name): Return const char *.  Use get_DW_ATE_name.
	(decode_locdesc): Use get_DW_OP_name.
	* dwarf2loc.c (unimplemented): Use get_DW_OP_name.
	(dwarf2_compile_expr_to_ax): Likewise.
	(disassemble_dwarf_expression): Likewise.
	* dwarf2expr.h: (dwarf_stack_op_name): Remove.

2012-05-07  Chung-Lin Tang  <cltang@codesourcery.com>
